<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="16dp">

    <RelativeLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:layout_marginTop="@dimen/_4sdp">

        <ImageView
            android:id="@+id/back_btn"
            android:layout_width="@dimen/_27sdp"
            android:layout_height="@dimen/_27sdp"
            android:layout_alignParentStart="true"
            android:layout_centerInParent="true"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/app_name"
            android:padding="@dimen/_4sdp"
            android:src="@drawable/ic_back" />

        <TextView
            android:id="@+id/header_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:fontFamily="@font/inter_semibold"
            android:text="@string/new_contact"
            android:textColor="@color/title_color"
            android:textSize="@dimen/_16ssp" />
    </RelativeLayout>

    <com.makeramen.roundedimageview.RoundedImageView
        android:layout_gravity="center"
        android:id="@+id/contactImageView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginBottom="16dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/app_name"
        android:scaleType="centerCrop"
        android:src="@drawable/profile_img"
        app:riv_corner_radius="@dimen/_50sdp" />

    <TextView
        android:layout_gravity="center"
        android:id="@+id/uploadImageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_2sdp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/rounded_btn"
        android:paddingHorizontal="@dimen/_10sdp"
        android:paddingVertical="@dimen/_5sdp"
        android:text="@string/upload_image"
        android:textColor="@color/white" />



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:text="@string/first_name"
        android:textColor="@color/title_color"
        android:textSize="@dimen/_11ssp"
        android:textStyle="bold" />


    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/firstNameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_4sdp"
        android:background="@drawable/bg_editetext"
        android:drawablePadding="@dimen/_8sdp"
        android:hint="@string/first_name"
        android:inputType="text"
        android:paddingHorizontal="@dimen/_12sdp"
        android:paddingVertical="@dimen/_9sdp"
        android:textColor="@color/colorGrey2"
        android:textColorHint="@color/edittext_hint_color" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:text="@string/last_name"
        android:textColor="@color/title_color"
        android:textSize="@dimen/_11ssp"
        android:textStyle="bold" />


    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/lastNameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_4sdp"
        android:background="@drawable/bg_editetext"
        android:drawablePadding="@dimen/_8sdp"
        android:hint="@string/last_name"
        android:inputType="text"
        android:paddingHorizontal="@dimen/_12sdp"
        android:paddingVertical="@dimen/_9sdp"
        android:textColor="@color/colorGrey2"
        android:textColorHint="@color/edittext_hint_color" />



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:text="@string/phone_number"
        android:textColor="@color/title_color"
        android:textSize="@dimen/_11ssp"
        android:textStyle="bold" />


    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/phoneNumberEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_4sdp"
        android:background="@drawable/bg_editetext"
        android:drawablePadding="@dimen/_8sdp"
        android:hint="@string/phone_number"
        android:inputType="number"
        android:paddingHorizontal="@dimen/_12sdp"
        android:paddingVertical="@dimen/_9sdp"
        android:textColor="@color/colorGrey2"
        android:textColorHint="@color/edittext_hint_color" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:text="@string/email"
        android:textColor="@color/title_color"
        android:textSize="@dimen/_11ssp"
        android:textStyle="bold" />


    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/emailEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_4sdp"
        android:background="@drawable/bg_editetext"
        android:drawablePadding="@dimen/_8sdp"
        android:hint="@string/email"
        android:paddingHorizontal="@dimen/_12sdp"
        android:paddingVertical="@dimen/_9sdp"
        android:textColor="@color/colorGrey2"
        android:textColorHint="@color/edittext_hint_color"
        android:inputType="textEmailAddress"/>

    <Button
        android:id="@+id/saveContactButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/rounded_btn"
        android:text="@string/save"
        android:textColor="@color/white"
        android:textStyle="bold" />
</LinearLayout>
