<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="16dp">


    <RelativeLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:layout_marginTop="@dimen/_4sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <ImageView
            android:id="@+id/back_btn"
            android:layout_width="@dimen/_27sdp"
            android:layout_height="@dimen/_27sdp"
            android:layout_alignParentStart="true"
            android:layout_centerInParent="true"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/app_name"
            android:padding="@dimen/_4sdp"
            android:src="@drawable/ic_back" />


        <TextView
            android:id="@+id/header_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:fontFamily="@font/inter_semibold"
            android:text="@string/edit_contact"
            android:textColor="@color/title_color"
            android:textSize="@dimen/_16ssp" />


    </RelativeLayout>

    <!-- ImageView for Contact Photo -->
    <com.makeramen.roundedimageview.RoundedImageView
        android:layout_marginTop="@dimen/_10sdp"
        android:id="@+id/contactImage"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginBottom="2dp"
        app:riv_corner_radius="@dimen/_50sdp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/profile_img"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:scaleType="centerCrop"
        android:layout_gravity="center" />

    <!-- Upload Image Button -->
    <TextView
        android:background="@drawable/rounded_btn"
        android:id="@+id/btnUploadImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/upload_image"
        android:textColor="@color/white"
        android:paddingVertical="@dimen/_5sdp"
        android:paddingHorizontal="@dimen/_10sdp"
        android:layout_gravity="center"
        android:layout_marginBottom="16dp" />



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:text="@string/name"
        android:textColor="@color/title_color"
        android:textSize="@dimen/_11ssp"
        android:textStyle="bold" />


    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/etName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_4sdp"
        android:background="@drawable/bg_editetext"
        android:drawablePadding="@dimen/_8sdp"
        android:hint="@string/name"
        android:inputType="text"
        android:paddingHorizontal="@dimen/_12sdp"
        android:paddingVertical="@dimen/_9sdp"
        android:textColor="@color/colorGrey2"
        android:textColorHint="@color/edittext_hint_color" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:text="@string/phone_number"
        android:textColor="@color/title_color"
        android:textSize="@dimen/_11ssp"
        android:textStyle="bold" />


    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/etPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_4sdp"
        android:background="@drawable/bg_editetext"
        android:drawablePadding="@dimen/_8sdp"
        android:hint="@string/phone_number"
        android:inputType="number"
        android:paddingHorizontal="@dimen/_12sdp"
        android:paddingVertical="@dimen/_9sdp"
        android:textColor="@color/colorGrey2"
        android:textColorHint="@color/edittext_hint_color" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:text="@string/email"
        android:textColor="@color/title_color"
        android:textSize="@dimen/_11ssp"
        android:textStyle="bold" />


    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_4sdp"
        android:background="@drawable/bg_editetext"
        android:drawablePadding="@dimen/_8sdp"
        android:hint="@string/email"
        android:paddingHorizontal="@dimen/_12sdp"
        android:paddingVertical="@dimen/_9sdp"
        android:textColor="@color/colorGrey2"
        android:textColorHint="@color/edittext_hint_color"
        android:inputType="textEmailAddress"/>


    <Button
        android:layout_marginTop="@dimen/_10sdp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:background="@drawable/rounded_btn"
        android:id="@+id/btnSaveContact"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save" />
</LinearLayout>
