<?xml version="1.0" encoding="utf-8" ?><!--
  ~ Company : AndroPlaza
  ~ Detailed : Software Development Company in Sri Lanka
  ~ Developer : Buddhika
  ~ Contact : support@androplaza.store
  ~ Whatsapp : +94711920144
  -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <androidx.cardview.widget.CardView
        android:layout_width="0.0dip"
        android:layout_height="wrap_content"
        app:cardCornerRadius="16.0dip"
        app:cardElevation="6dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_5sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:fontFamily="@font/switzer_semibold"
                android:paddingBottom="10dp"
                android:text="@string/select_sim_for_calling"
                android:textColor="@color/black"
                android:textSize="17sp" />

            <RadioGroup
                android:id="@+id/radioGroupSim"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingVertical="8dp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/_2sdp"
                android:layout_marginBottom="8dp"
                android:background="@color/line_color" />


            <CheckBox
                android:id="@+id/checkBoxSavePreference"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/black"
                android:text="@string/always_use_this_sim_for_calling"
                android:textColor="@color/black" />


            <!-- Buttons Layout -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:orientation="horizontal"
                android:paddingTop="@dimen/_5sdp">

                <Button
                    android:id="@+id/btnCancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:padding="8dp"
                    android:text="@string/cancel"
                    android:textAllCaps="false"
                    android:textColor="@color/colorPrimary"
                    tools:ignore="ButtonStyle" />

                <Button
                    android:id="@+id/btnCall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_7sdp"
                    android:backgroundTint="@color/colorPrimary"
                    android:padding="8dp"
                    android:text="@string/call"
                    android:textAllCaps="false"
                    android:textColor="@android:color/white"
                    tools:ignore="ButtonStyle" />
            </LinearLayout>

        </LinearLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>